<resources>
    <string name="app_name">EShop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_credentials">Your credentials are invalid. Please check your email and password. Sign up if you do not have an account yet.</string>
    <string name="title_activity_register">Create your account</string>

    <string name="prompt_username">Username</string>
    <string name="register_button">Register</string>
    <string name="title_activity_main">Welcome to your shop!</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="product_photo_content_des">Product Photo</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="check_out">Check out</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="change_quantity">Change quantity</string>
    <string name="product_photo">Product photo</string>
    <string name="remove_product">Remove product</string>

    <string name="unknown_error">Unknown error</string>

    <string name="label_review">Reviews</string>

    <string name="label_price">Price:</string>
    <string name="title_activity_personal_info">About you</string>
    <string name="title_activity_payments">Add Your Card</string>
    <string name="title_activity_edit_theme">Choose your theme</string>
    <string name="theme_pref">theme_pref</string>
    <string name="radioButton_intent_pref">radioButton_intent_pref</string>
    <string name="no_card_for_payment">no card for payment</string>
    <string name="payment_error">payment_error</string>
    <string name="order_history">Order History</string>
    <string name="forward_arrow">Forward Arrow</string>

    <!-- Order Detail Activity -->
    <string name="label_order_id">Order ID:</string>
    <string name="label_order_date">Order Date:</string>
    <string name="label_order_total">Order Total:</string>
    <string name="label_order_detail_order_information">Order Information</string>
    <string name="label_order_list">Order List</string>

    <!-- Test strings -->
    <string name="test_description">test description</string>
    <string name="test_order_date">test order date</string>
    <string name="test_order_id">test order id</string>
    <string name="test_order_total">$0.00</string>
    <string name="test_product_availability">test product availability</string>
    <string name="test_product_name">test product name</string>
    <string name="test_product_price">test product price</string>
    <string name="test_product_total">test product total</string>

    <!-- SharedPref keys -->
    <string name="email_pref">email</string>
    <string name="shared_pref">shared pref</string>
    <string name="token_pref">token</string>
    <string name="label_quantity">Quantity:</string>
    <string name="test_product_quantity_purchase">test product quantity purchase</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="label_filter">Filter</string>
    <string name="test_username">test username</string>
    <string name="test_sex">test sex</string>
    <string name="test_dob">test dob</string>
    <string name="label_edit">Edit</string>
    <string name="not_selected">Not selected</string>
    <string name="label_description">Description</string>

    <string-array name="sexes">
        <item>Not selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>