<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainActivity.account.orderHistory.orderDetail.OrderDetailActivity"
    android:padding="@dimen/padding_activity_fragment">

    <TextView
        android:id="@+id/textView_order_detail_label_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_detail_order_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_order_detail_label_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_order_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_label_info" />

    <TextView
        android:id="@+id/textView_order_detail_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/test_order_id"
        app:layout_constraintStart_toEndOf="@+id/textView_order_detail_label_order_id"
        app:layout_constraintTop_toTopOf="@+id/textView_order_detail_label_order_id" />

    <TextView
        android:id="@+id/textView_order_detail_label_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_date"
        app:layout_constraintStart_toStartOf="@+id/textView_order_detail_label_order_id"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_label_order_id" />

    <TextView
        android:id="@+id/textView_order_detail_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/test_order_date"
        app:layout_constraintStart_toEndOf="@+id/textView_order_detail_label_order_date"
        app:layout_constraintTop_toTopOf="@+id/textView_order_detail_label_order_date" />

    <TextView
        android:id="@+id/textView_order_detail_label_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_total"
        app:layout_constraintStart_toStartOf="@+id/textView_order_detail_label_order_date"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_label_order_date" />

    <TextView
        android:id="@+id/textView_order_detail_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/test_order_total"
        app:layout_constraintStart_toEndOf="@+id/textView_order_detail_label_order_total"
        app:layout_constraintTop_toTopOf="@+id/textView_order_detail_label_order_total" />

    <TextView
        android:id="@+id/textView_order_detail_label_order_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_order_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_label_order_total" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/border_round_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_order_detail_label_order_list"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_label_order_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_order_detail_order_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>