<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_items"
    android:background="@drawable/border_round_grey"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/test_order_id"
        app:layout_constraintBottom_toTopOf="@+id/textView_order_date"
        app:layout_constraintStart_toEndOf="@+id/textView_label_order_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/test_order_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_label_order_date"
        app:layout_constraintTop_toBottomOf="@+id/textView_order_id" />

    <ImageView
        android:id="@+id/imageView_order_forward_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
        android:contentDescription="@string/forward_arrow" />

    <TextView
        android:id="@+id/textView_label_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_label_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_order_id" />
</androidx.constraintlayout.widget.ConstraintLayout>